tests/baselines/reference/parserArrowFunctionExpression4.errors.txt
parserArrowFunctionExpression4.ts(1,1): error TS2304: Cannot find name 'a'.
parserArrowFunctionExpression4.ts(1,6): error TS2695: Left side of comma operator is unused and has no side effects.
parserArrowFunctionExpression4.ts(1,17): error TS2304: Cannot find name 'a'.


==== parserArrowFunctionExpression4.ts (3 errors) ====
    a = (() => { }, a)
    ~
!!! error TS2304: Cannot find name 'a'.
         ~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                    ~
!!! error TS2304: Cannot find name 'a'.